--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-image": "^2.4.4",
     "gatsby-plugin-algolia": "^0.11.2",
     "gatsby-plugin-gdpr-cookies": "^1.0.7",
+    "gatsby-plugin-layout": "^1.3.10",
     "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-manifest": "^2.4.5",
     "gatsby-plugin-mdx": "^1.2.9",
